--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
 body {
     text-align: center;
+    background: url("../images/bg-full.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
