win loss states added
Beginning of work on win/loss states

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,11 @@ body {
     -o-background-size: cover;
     background-size: cover;
 }
+
+#loser {
+	display: none;
+}
+
+#winner {
+	display: none;
+}
